add insert data api , step 5 c d e. update add gen json file.
